--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -1,14 +1,39 @@
 <template name="Home_Page">
-  <div class="ui middle aligned centered grid text container">
+  <div class="ui container">
 
-    <div class="four wide column">
-      <img class="ui small circular image" src="/images/meteor-logo.png"/>
-    </div>
-
-    <div class="eight wide column">
-      <h1>Welcome to this template</h1>
-      <p>Now get to work and modify this app!</p>
-    </div>
-
+    <table style ="margin-top: 20px;" class="ui celled table">
+      <thead>
+      <tr>
+        <th>First</th>
+        <th>Last</th>
+        <th>Address</th>
+        <th>Phone</th>
+        <th>Email</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Bryant</td>
+        <td>Sanchez</td>
+        <td>1234 asdf</td>
+        <td>123345678910</td>
+        <td>abc@hawaii.edu</td>
+      </tr>
+      <tr>
+        <td>john</td>
+        <td>henry</td>
+        <td>6789 hawaii</td>
+        <td>987654321</td>
+        <td>cba@hawaii.edu</td>
+      </tr>
+      <tr>
+        <td>henry</td>
+        <td>michael</td>
+        <td>9876 oahu</td>
+        <td>246812334</td>
+        <td>dfg@hawaii.edu</td>
+      </tr>
+      </tbody>
+    </table>
   </div>
 </template>
