--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -10,6 +10,7 @@
         <th>Address</th>
         <th>Phone</th>
         <th>Email</th>
+        <th>Edit</th>
       </tr>
       </thead>
 
@@ -21,6 +22,7 @@
         <td>{{Contact.Address}}</td>
         <td>{{Contact.Telephone}}</td>
         <td>{{Contact.Email}}</td>
+        <td><a href="{{pathFor 'Edit_Contact_Page' _id=contact._id}}">Edit</a></td>
       </tr>
       {{/each}}
       </tbody>
