--- a/app/imports/ui/pages/add-contact-page.html
+++ b/app/imports/ui/pages/add-contact-page.html
@@ -13,7 +13,7 @@
       <div class="field">
         <label>Telephone/E-mail</label>
         <div class="two fields">
-          {{> Text_Form_Control label="Telephone" required=true errorMessage=(fieldError "telephone")}}
+          {{> Number_Form_Control label="Telephone" required=true errorMessage=(fieldError "telephone")}}
           {{> Text_Form_Control label="Email" required=true errorMessage=(fieldError "email")}}
         </div>
       </div>
