--- a/app/imports/ui/pages/add-contact-page.html
+++ b/app/imports/ui/pages/add-contact-page.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="field">
-        {{> Checkbox_Form_Control label= "Favorite" checkboxes = favorite}}
+        {{> Checkbox_Field label= "Favorite" checkboxes = fav}}
       </div>
       <button class="ui button" type="submit">Submit</button>
     </form>
