--- a/app/imports/ui/pages/edit-contact-page.html
+++ b/app/imports/ui/pages/edit-contact-page.html
@@ -23,6 +23,10 @@
                 "email")}}
           </div>
         </div>
+        <div class="field">
+          {{> Checkbox_Field label= "Favorite" checked = fav}}
+        </div>
+
         <button class="ui button" type="submit">Update</button>
       </form>
     </div>
