--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -17,7 +17,7 @@
       <tbody>
       {{#each contact in contactsList}}
       <tr>
-        <td>{{contact.first}}</td>
+        <td><i class="{{ star 'favorite' contact}}"></i>{{contact.first}}</td>
         <td>{{contact.last}}</td>
         <td>{{contact.address}}</td>
         <td>{{contact.telephone}}</td>
