--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -11,6 +11,7 @@
         <th>Phone</th>
         <th>Email</th>
         <th>Edit</th>
+        <th>Groups</th>
       </tr>
       </thead>
 
@@ -23,6 +24,7 @@
         <td>{{contact.telephone}}</td>
         <td>{{contact.email}}</td>
         <td><a href="{{pathFor 'Edit_Contact_Page' _id=contact._id}}">Edit</a></td>
+        <td><i class="{{error 'Friends' contact}}"></i> {{contact.group}}</td>
       </tr>
       {{/each}}
       </tbody>
